CPG-DEV/src/objects/Competitor_Junction__c.object
<CustomObject>
    <description>US 19, 20, 22, 13, 4, 41</description>
    <fields>
        <fullName>Competitor_Change_in_Behavior_Detail__c</fullName>
        <description>US#20</description>
        <label>Competitor Change in Behavior Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_Change_in_Behavior__c</fullName>
        <label>Competitor Change in Behavior</label>
        <picklist>
            <picklistValues>
                <fullName>Disciplined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More Aggressive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Position</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stepping back</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor_Performance_Trend__c</fullName>
        <label>Competitor Performance Trend</label>
        <picklist>
            <picklistValues>
                <fullName>Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Concorrente</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Customers</relationshipLabel>
        <relationshipName>Competitor_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Change_in_Behavior_Detail__c</fullName>
        <description>US#20</description>
        <label>Customer Change in Behavior Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Change_in_Behavior__c</fullName>
        <label>Customer Change in Behavior</label>
        <picklist>
            <picklistValues>
                <fullName>Decrease in Orders/Volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delayed Shipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extra/added Shipments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase in Orders/Volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moved to Inviting to Collaborate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moved to Loyal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moved to RFP/Bidding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moved to Transactional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speed up Shipments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Reason Required)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Competitors</relationshipLabel>
        <relationshipName>Competitor_Junctions1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LegacyRecordID__c</fullName>
        <label>Legacy Record ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_To_Leave_Supplier__c</fullName>
        <description>US#19</description>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>US4</description>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Regional_Performance_Detail__c</fullName>
        <description>Us4</description>
        <label>Regional Performance Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Performance__c</fullName>
        <description>US4</description>
        <label>Regional Performance</label>
        <picklist>
            <picklistValues>
                <fullName>Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Why_did_the_customer_leave_supplier__c</fullName>
        <label>Why Did the Customer Leave Supplier?</label>
        <picklist>
            <picklistValues>
                <fullName>Multi Source Supply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plant Location/Freight Advantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product, Product Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reputation/Credibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Performance Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Reason Required)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Competitor Junction</label>
    <nameField>
        <label>Competitor Junction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitor Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>